src/scss/states/game.scss
.controller {
	display: flex;
	align-items: center;
  justify-content: center;
	flex-direction: row;
}

.controller__direction {
	flex: 1;
	min-width: 60vw;
	min-height: 60vw;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	transform: rotate(45deg);
	background-image: url('../assets/images/controller/buttons-neu/button-test.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

.button {

	&--left, &--right {
		display: flex;
		align-items: center;
		justify-content: center;
	}
}

.button--right {
	height:90vh;
	width: 30vw;
	border-radius: 0;
	overflow:hidden;
	background-image: url('../assets/images/controller/button-right.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
	display:hidden;
}

.controller__button span {
	display:block;
}

.controller__interaction {
	flex: 1;
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	transform: rotate(-45deg);
	margin-left:-10vw;
	min-width: 60vw;
	min-height: 60vw
}

.button--shoot {
	height:90vh;
	width: 30vw;
	border-radius: 0;
	overflow:hidden;
	background-image: url('../assets/images/controller/button-shoot.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

.button__right--active {
	background-image:url('../assets/images/controller/button-right-selected.svg') !important;
}

.button__left--active {
	background-image:url('../assets/images/controller/button-left-selected.svg') !important;
}

.button__jump--active {
	background-image:url('../assets/images/controller/button-jump-selected.svg') !important;
}

.button__shoot--active {
	background-image:url('../assets/images/controller/button-shoot-selected.svg') !important;
}

.button--jump {
	height:90vh;
	width: 30vw;
	border-radius: 0;
	overflow:hidden;
	background-image: url('../assets/images/controller/button-jump.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
}

.button--left {
	height:90vh;
	width: 30vw;
	border-radius: 0;
	overflow:hidden;
	background-image: url('../assets/images/controller/button-left.svg');
	background-repeat: no-repeat;
	background-size: 100% 100%;
	display: hidden;
}

